Change footer style and fix body overflow-x

--- a/book+authorlist/book_author.css
+++ b/book+authorlist/book_author.css
@@ -8,6 +8,8 @@ body{
     margin: 0px;
     padding: 0px;
     font-family: Arial, Helvetica, sans-serif;
+    overflow-x: hidden;
+
 }
 
 button{
@@ -358,8 +360,10 @@ a:active { text-decoration: none; }
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    border: 4px solid black;
+    color: white;
+    background-color: rgb(97, 99, 101);
     width: 100vw;
+    margin-top: 20px;
 }
 .nav-pfp{
     max-width: 60px;
