--- a/login/login.css
+++ b/login/login.css
@@ -8,6 +8,8 @@ body{
     margin: 0px;
     padding: 0px;
     font-family: Arial, Helvetica, sans-serif;
+    overflow-x: hidden;
+
 }
 
 button{
@@ -390,8 +392,10 @@ a:visited {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    border: 4px solid black;
+    color: white;
+    background-color: rgb(97, 99, 101);
     width: 100vw;
+    margin-top: 20px;
 }
 .nav-pfp{
     max-width: 60px;
