--- a/publish/publish.css
+++ b/publish/publish.css
@@ -7,6 +7,8 @@ body{
     margin: 0px;
     padding: 0px;
     font-family: Arial, Helvetica, sans-serif;
+    overflow-x: hidden;
+
 }
 
 button{
@@ -392,7 +394,8 @@ a:active { text-decoration: none; }
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    border: 4px solid black;
+    color: white;
+    background-color: rgb(97, 99, 101);
     width: 100vw;
     margin-top: 20px;
 }
