--- a/signup/signup.css
+++ b/signup/signup.css
@@ -8,9 +8,11 @@ html{
 }
 
 body{
-    display:flex;
-    justify-content: center;
-    flex-direction: column;
+    margin: 0px;
+    padding: 0px;
+    font-family: Arial, Helvetica, sans-serif;
+    overflow-x: hidden;
+
 }
 #background-video{
     position: fixed;
@@ -233,8 +235,10 @@ i{
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    border: 4px solid black;
+    color: white;
+    background-color: rgb(97, 99, 101);
     width: 100vw;
+    margin-top: 20px;
 }
 .nav-pfp{
     max-width: 60px;
