--- a/user/user.css
+++ b/user/user.css
@@ -9,6 +9,7 @@ body{
     margin: 0px;
     padding: 0px;
     font-family: Arial, Helvetica, sans-serif;
+    overflow-x: hidden;
 }
 
 button{
@@ -526,7 +527,8 @@ a:active { text-decoration: none; }
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    border: 4px solid black;
+    color: white;
+    background-color: rgb(97, 99, 101);
     width: 100vw;
     margin-top: 100px;
     bottom: 0px;
